--- a/html of MAJOR page/index.html
+++ b/html of MAJOR page/index.html
@@ -260,6 +260,46 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-3 text-center">
+                        <div class="thumbnail">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <div class="caption">
+                                <h3>John Smith<br>
+                            <small>Area of Study</small>
+                        </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="thumbnail">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <div class="caption">
+                                <h3>John Smith<br>
+                            <small>Area of Study</small>
+                        </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="thumbnail">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <div class="caption">
+                                <h3>John Smith<br>
+                            <small>Area of Study</small>
+                        </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="thumbnail">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <div class="caption">
+                                <h3>John Smith<br>
+                            <small>Area of Study</small>
+                        </h3>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <!-- end of students list-->
