--- a/html of MAJOR page/index.html
+++ b/html of MAJOR page/index.html
@@ -164,8 +164,8 @@
                             <div>
                                 <h3>Graduation Years</h3>
                                 <ul>
-                                    <li><a href="url">2010</a></li>
-                                    <li><a href="url">2011</a></li>
+                                    <li><a href="url">Documentry</a></li>
+                                    <li><a href="url">Video</a></li>
                                     <li><a href="url">2012</a></li>
                                     <li><a href="url">2013</a></li>
                                     <li><a href="url">2014</a></li>
