--- a/slider/work.html
+++ b/slider/work.html
@@ -60,7 +60,7 @@
         <div class="row" id="twocolumngallery">
 
 
-            <div class="col-xs-12 col-sm-5 col-sm-offset-1">
+            <div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1">
 
 
 
