--- a/slider/work.html
+++ b/slider/work.html
@@ -104,7 +104,75 @@
 
 
         </div>
-        <!--end of twocolumngallery-->
+
+    </div>
+
+
+    <div class="container-fluid" id="">
+        <div class="row">
+
+            <div class="col-md-4 text-center" id="h-vat">
+
+                <div class="col-md-12">
+                    <img class="img-responsive" src="image/vat.png">
+                </div>
+
+                <div class="col-md-12 allslider">
+
+
+                    <div class="bg-ivory hide-title" id="tribeca-loft">
+                        <h5 class="text-left">TriBeCa Loft, 2007</h5>
+
+                        <div class="slider">
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                                </ol>
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <h3>cbdsuic idsvbvi</h3></div>
+
+                                    <div class="item">
+                                        <h3>cbdsuic idsvbvi</h3></div>
+
+                                    <div class="item">
+                                        <h3>cbdsuic idsvbvi</h3></div>
+
+                                    <div class="item">
+                                        <h3>cbdsuic idsvbvi</h3></div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------end of slider------->
+
+
+
+
+                </div>
+
+            </div>
+
+
+
+            <div class="col-md-4" id="h-mmd">
+                <img class="img-responsive" src="image/mmd.png">
+            </div>
+
+
+            <div class="col-md-4" id="h-ani">
+                <img class="img-responsive" src="image/ani.png">
+            </div>
+        </div>
+
 
     </div>
     <!--end of container-fluid-->
