--- a/slider home/work.html
+++ b/slider home/work.html
@@ -58,31 +58,27 @@
 
 
 
-    <div class="container-fluid" id="slider-test">
+    <div class="container-fluid text-center" id="slider-test">
         <div class="row">
 
-            <div class="col-md-4 text-center" id="h-vat">
+            <div class="col-md-4 tile" id="h-vat">
 
                 <div class="col-md-12">
-                    <img class="img-responsive" src="image/vat.png">
+                    <img class="img-responsive" align="middle" src="image/vat.png">
+                </div>
+
+
+
+                <div class="col-md-12">
+                    <h1>Video Arts and Technology</h1>
                 </div>
 
                 <div class="col-md-12 allslider">
-
-
                     <div class="bg-ivory hide-title" id="tribeca-loft">
                         <h5 class="text-left">TriBeCa Loft, 2007</h5>
 
                         <div class="slider">
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                                </ol>
 
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
@@ -102,22 +98,28 @@
                             </div>
                         </div>
                     </div>
-                    <!-------end of slider------->
-
                 </div>
-
-
-
+                <!-------end of slider------->
             </div>
+            <!-------end of h-vat------->
 
 
 
-            <div class="col-md-4" id="h-mmd">
+            <div class="col-md-4 tile" id="h-mmd">
 
                 <div class="col-md-12">
                     <img class="img-responsive" src="image/mmd.png">
                 </div>
 
+
+                <div class="col-md-12">
+                    <h1>Multimedia programming & Design</h1>
+
+                    <a class="btn btn-primary" href="#" role="button">MMP</a>
+                    <a class="btn btn-primary" href="#" role="button">MMD</a>
+                </div>
+
+
                 <div class="col-md-12 allslider">
 
 
@@ -126,14 +128,7 @@
 
                         <div class="slider">
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                                </ol>
+
 
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
@@ -159,27 +154,22 @@
             </div>
 
 
-            <div class="col-md-4" id="h-ani">
+            <div class="col-md-4 tile" id="h-ani">
                 <div class="col-md-12">
                     <img class="img-responsive" src="image/ani.png">
                 </div>
 
+                <div class="col-md-12">
+                    <h1>Animation and Motion Graphics</h1>
+                </div>
+
                 <div class="col-md-12 allslider">
-
-
                     <div class="bg-ivory hide-title" id="tribeca-loft">
                         <h5 class="text-left">TriBeCa Loft, 2007</h5>
 
                         <div class="slider">
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                                    <li data-target="#myCarousel" data-slide-to="3"></li>
-                                    <li data-target="#myCarousel" data-slide-to="4"></li>
-                                </ol>
+
 
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
