--- a/slider home/work.html
+++ b/slider home/work.html
@@ -68,7 +68,7 @@
         <div class="row">
 
 
-            <div class="col-md-4 tiles" id="h-vat">
+            <div class="col-xm-12 col-sm-4 col-md-4 col-lg-4 tiles" id="h-vat">
 
                 <img class="img-responsive" align="middle" src="image/1.png">
 
@@ -97,7 +97,7 @@
 
 
 
-            <div class="col-md-4 tiles" id="h-mmd">
+            <div class="col-xm-12 col-sm-4 col-md-4 col-lg-4 tiles" id="h-mmd">
                 <img class="img-responsive" src="image/2.png">
 
                 <h1>Multimedia programming and Design</h1>
@@ -124,7 +124,7 @@
             </div>
             <!-------end of h-mmd------->
 
-            <div class="col-md-4 tiles" id="h-ani">
+            <div class="col-xm-12 col-sm-4 col-md-4 col-lg-4 tiles" id="h-ani">
 
                 <img class="img-responsive" src="image/3.png">
 
